--- a/main.html
+++ b/main.html
@@ -244,7 +244,7 @@
     <button class="btn-view live" onclick="openProject('https://abdulrahmanmomtaz.github.io/Fasion-Food/')">Live Demo</button>
   </div>
 </div>
-    <div class="project-card">
+    <!-- <div class="project-card">
   <img src="images/Screenshot 2025-08-03 013812.png" alt="Project Preview">
   <h3>game website</h3>
   <p>A responsive game website built using HTML, CSS, JS. it foucs on coding with JS.</p>
@@ -252,7 +252,7 @@
     <button class="btn-view" onclick="openProject('https://github.com/abdulrahmanmomtaz/Ultimate-Quiz-Game')">GitHub</button>
     <button class="btn-view live" onclick="openProject('https://abdulrahmanmomtaz.github.io/Ultimate-Quiz-Game/')">Live Demo</button>
   </div>
-</div>
+</div> -->
     <div class="project-card">
   <img src="images/Screenshot 2025-08-03 014120.png" alt="Project Preview">
   <h3>dentist clinic website</h3>
